Atualizei documentacao + criei request
